--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
     	<artifactId>hamcrest-all</artifactId>
     	<version>1.3</version>
     </dependency>
+    <dependency>
+    	<groupId>org.mockito</groupId>
+    	<artifactId>mockito-core</artifactId>
+    	<version>1.10.17</version>
+    	<scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
   	<plugins>
