--- a/pom.xml
+++ b/pom.xml
@@ -1,78 +1,125 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.nauvalatmaja</groupId>
-  <artifactId>SimpleDrawingTool</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+	<groupId>com.nauvalatmaja</groupId>
+	<artifactId>SimpleDrawingTool</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
-  <name>SimpleDrawingTool</name>
-  <url>http://maven.apache.org</url>
+	<name>SimpleDrawingTool</name>
+	<url>http://maven.apache.org</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-    	<groupId>org.hamcrest</groupId>
-    	<artifactId>hamcrest-all</artifactId>
-    	<version>1.3</version>
-    </dependency>
-    <dependency>
-    	<groupId>org.mockito</groupId>
-    	<artifactId>mockito-core</artifactId>
-    	<version>1.10.17</version>
-    	<scope>test</scope>
-    </dependency>
-  </dependencies>
-  <build>
-  	<plugins>
-  		<plugin>
-  			<groupId>org.apache.maven.plugins</groupId>
-  			<artifactId>maven-compiler-plugin</artifactId>
-  			<version>3.2</version>
-  			<configuration>
-  			    <source>1.6</source>
-  			    <target>1.6</target>
-  			</configuration>
-  		</plugin>
-  		<plugin>
-  			<groupId>org.codehaus.mojo</groupId>
-  			<artifactId>exec-maven-plugin</artifactId>
-  			<version>1.3.2</version>
-  			<configuration>
-  			    <mainClass>com.nauvalatmaja.SimpleDrawingTool.Main</mainClass>
-  			</configuration>
-  		</plugin>
-  		<plugin>
-  			<groupId>org.apache.maven.plugins</groupId>
-  			<artifactId>maven-surefire-plugin</artifactId>
-  			<version>2.18.1</version>
-  		</plugin>
-  		<plugin>
-		    <groupId>org.eluder.coveralls</groupId>
-		    <artifactId>coveralls-maven-plugin</artifactId>
-		    <version>3.0.1</version>
-		</plugin>
-  		<plugin>
-		    <groupId>org.codehaus.mojo</groupId>
-		    <artifactId>cobertura-maven-plugin</artifactId>
-		    <version>2.6</version>
-		    <configuration>
-		        <format>xml</format>
-		        <maxmem>256m</maxmem>
-		        <!-- aggregated reports for multi-module projects -->
-		        <aggregate>true</aggregate>
-		    </configuration>
-		</plugin>
-  	</plugins>
-  </build>
+	<profiles>
+		<profile>
+			<id>standard-jdk</id>
+			<activation>
+				<file>
+					<exists>${java.home}/../lib/tools.jar</exists>
+				</file>
+			</activation>
+			<properties>
+				<tools-jar>${java.home}/../lib/tools.jar</tools-jar>
+			</properties>
+		</profile>
+		<profile>
+			<id>apple-jdk</id>
+			<activation>
+				<file>
+					<exists>${java.home}/../Classes/classes.jar</exists>
+				</file>
+			</activation>
+			<properties>
+				<tools-jar>${java.home}/../Classes/classes.jar</tools-jar>
+			</properties>
+		</profile>
+	</profiles>
+
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>1.10.17</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+            <groupId>net.sourceforge.cobertura</groupId>
+            <artifactId>cobertura</artifactId>
+            <version>2.0.3</version>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.sun</groupId>
+                    <artifactId>tools</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.2</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.3.2</version>
+				<configuration>
+					<mainClass>com.nauvalatmaja.SimpleDrawingTool.Main</mainClass>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.18.1</version>
+			</plugin>
+			<plugin>
+				<groupId>org.eluder.coveralls</groupId>
+				<artifactId>coveralls-maven-plugin</artifactId>
+				<version>3.0.1</version>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.6</version>
+				<dependencies>
+					<dependency>
+						<groupId>com.sun</groupId>
+						<artifactId>tools</artifactId>
+						<version>1.6</version>
+						<scope>system</scope>
+						<systemPath>${tools-jar}</systemPath>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<format>xml</format>
+					<format>html</format>
+					<maxmem>256m</maxmem>
+					<!-- aggregated reports for multi-module projects -->
+					<aggregate>true</aggregate>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
